<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C) 2012 The Android Open Source Project

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->

<resources>
    <string name="app_name">Group Accounting</string>
    <string name="title_setup_group">Group setup</string>
    <string name="title_expenses">Expenses</string>
    <string name="title_add_expense">New expense</string>
    <string name="title_edit_expense">Edit expense</string>
    <string name="str_add_member">Enter participant name here</string>
    <string name="title_new_participant">Add a participant</string>
    <string name="search_title">Search</string>
    
    <string name="menu_add">New expense</string>
    <string name="menu_done">Done</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>
    
    <string name="add_when">When?</string>
    <string name="add_who">Who paid?</string>
    <string name="add_how_much">CHF</string>
    <string name="add_what">What?</string>
    <string name="toast_no_price">Please enter the price</string>
    <string name="strCHF">.- CHF</string>
    
    <string name="about_body">Created by Romain Maffina</string>
    
    <string name="help_body">This app allows you to manage very easily the group expenses. 
        Therefore it\'s very useful when you plan some week-end activities or holidays with friends or family. </string>
    
    <string-array name="members_array">
        <item>Michael</item>
        <item>Christian</item>
        <item>Constant</item>
        <item>Romain</item>
    </string-array>
        <string name="add_what_hint">optional</string>
    
</resources>