<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <!--
    <item android:id="@+id/menu_search"
          android:title="@string/search_title"
          android:icon="@drawable/ic_action_search"
          android:showAsAction="collapseActionView|ifRoom"
          android:actionViewClass="android.widget.SearchView" />
    -->      
    <item android:id="@+id/menu_add"
          android:icon="@drawable/ic_content_new"
          android:title="@string/menu_add"
          android:showAsAction="ifRoom|withText" />
    
    <item android:id="@+id/menu_done"
          android:icon="@drawable/ic_action_done"
          android:title="@string/menu_done"
          android:showAsAction="ifRoom|withText" />
    
    <item android:id="@+id/menu_about"
          android:title="@string/menu_about"
          android:showAsAction="withText" />
    
    <item android:id="@+id/menu_help"
          android:title="@string/menu_help"
          android:showAsAction="withText" />
</menu>