<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C) 2012 The Android Open Source Project

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dip"
    android:orientation="vertical" >

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dip"  >
 
	   	 	<TextView
	        android:id="@+id/txtWhen"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/add_when"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:layout_weight="1" />
          
            <Button
	        android:id="@+id/btnDate"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="2" />
            
            <Button
	        android:id="@+id/btnTime"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="2" />
            
    	</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dip"  >
            
	    <TextView
	        android:id="@+id/txtWho"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/add_who"
	        android:layout_gravity="center"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	        
	    <Spinner
		    android:id="@+id/members_spinner"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content" />
    
    </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="25dip"  >
        
        <TextView
        android:id="@+id/txtHowMuch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_how_much"

        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium" />
            
        <NumberPicker
        android:id="@+id/numberPickerHundred"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dip"
        android:layout_weight="1" />
        
        <NumberPicker
        android:id="@+id/numberPickerDecade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dip"
        android:layout_weight="1" />
            
        <NumberPicker
        android:id="@+id/numberPickerUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dip"
        android:layout_weight="1" />
        
    </LinearLayout>

 
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
        
    <TextView
        android:id="@+id/txtWhat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_what"
        android:layout_weight="1"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/textboxWhat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_weight="1"
        android:hint="@string/add_what_hint" />
    
    </LinearLayout>

</LinearLayout>